--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="text" placeholder="Enter location">
         <button id="btn">Click</button>
         <div class="icon">
-            <img id="weatherIcon" src="" alt="weatherIcon" />
+            <!-- <img id="weatherIcon" src="./amcharts_weather_icons_1.0.0/animated/cloudy-day-3.svg" alt="weatherIcon" /> -->
         </div>
         <div class="degree"></div>
         <div class="feel">Feels like </div>
