--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather app</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 </head>
 
 <body>
     <div class="container">
         <input type="text" placeholder="Enter location">
         <button id="btn">Click</button>
-        <div class="icon">
-            <!-- <img id="weatherIcon" src="./amcharts_weather_icons_1.0.0/animated/cloudy-day-3.svg" alt="weatherIcon" /> -->
-        </div>
+        <div class="icon"></div>
         <div class="degree"></div>
         <div class="feel">Feels like </div>
         <div class="last">Make most of this nice weather that i generated for you. Or else</div>
